# stlib

./: .clang-format  .coveragerc  .gitignore  .scrutinizer.yml  .travis.yml  MANIFEST.in  README.md  appveyor.yml  dev-requirements.txt  generate_docs.py  pylintrc  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  coverage.yml  dependency-review.yml  scorecards.yml
redist/: STEAMWORKS_SDK.LICENSE
src/: __init__.py  authenticator.py  client.py  login.py  plugins.py  steamtrades.py  universe.py  webapi.py
src/doc/: Makefile  conf.py  index.rst  make.bat
src/doc/_static/: custom.css
src/steam_api/: steam_api.cpp  steam_gameserver.h  steam_user.h  steam_utils.h
src/steamworks/: README.md  common.cpp  common.h  steam_api.cpp  steam_gameserver.cpp  steamworks.cpp  steamworks.h
src/stlib/: __init__.py  client.py  community.py  internals.py  login.py  plugins.py  universe.py  utils.py  webapi.py
steam_api/: steam_api.cpp  steam_gameserver.h  steam_utils.h  utils.h
steam_api/steamworks_sdk/: README.md
stlib/: __init__.py  authenticator.py  client.py  steam_api.py
stlib/steam_api/: steam_utils.h
tests/: __init__.py  conftest.py  test_authenticator.py  test_client.py  test_steam_api.py
tests/authenticator/: test_authenticator.py
tests/client/: test_client.py
tests/community/: test_community.py
tests/login/: test_login.py
tests/plugins/: test_plugins.py
tests/steam_api/: test_steam_api.py
tests/steamtrades/: test_steamtrades.py
tests/steamworks/: test_steamworks.py
tests/universe/: test_universe.py
tests/webapi/: test_webapi.py
tools/: auditwheel_.py
tools/Linux/: common.sh  dist_script.sh
tools/MSYS/: common.sh  dist_script.sh
tools/WSL/: common.py  dev_console.py  dist_script.py  update_dev_environment.py
tools/Windows/: common.cmd  dev_console.cmd  dist_script.cmd  dist_script_native.cmd  update_dev_environment.cmd
